v19.0/classes/GC.Spread.Sheets.Sparklines.Sparkline.md
# Class: Sparkline

[Sheets](../modules/GC.Spread.Sheets.md).[Sparklines](../modules/GC.Spread.Sheets.Sparklines.md).Sparkline

## Table of contents

### Constructors

- [constructor](GC.Spread.Sheets.Sparklines.Sparkline.md#constructor)

### Properties

- [column](GC.Spread.Sheets.Sparklines.Sparkline.md#column)
- [row](GC.Spread.Sheets.Sparklines.Sparkline.md#row)

### Methods

- [clone](GC.Spread.Sheets.Sparklines.Sparkline.md#clone)
- [data](GC.Spread.Sheets.Sparklines.Sparkline.md#data)
- [dataOrientation](GC.Spread.Sheets.Sparklines.Sparkline.md#dataorientation)
- [dateAxisData](GC.Spread.Sheets.Sparklines.Sparkline.md#dateaxisdata)
- [dateAxisOrientation](GC.Spread.Sheets.Sparklines.Sparkline.md#dateaxisorientation)
- [displayDateAxis](GC.Spread.Sheets.Sparklines.Sparkline.md#displaydateaxis)
- [group](GC.Spread.Sheets.Sparklines.Sparkline.md#group)
- [paintSparkline](GC.Spread.Sheets.Sparklines.Sparkline.md#paintsparkline)
- [setting](GC.Spread.Sheets.Sparklines.Sparkline.md#setting)
- [sparklineType](GC.Spread.Sheets.Sparklines.Sparkline.md#sparklinetype)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new Sparkline**(`row?`, `column?`, `dataReference?`, `dataOrientation?`, `type?`, `setting?`)

表示迷你图类。

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `row?` | `number` | 行索引。 |
| `column?` | `number` | 列索引。 |
| `dataReference?` | [`Range`](GC.Spread.Sheets.Range.md) | 迷你图引用的数据范围。 |
| `dataOrientation?` | [`DataOrientation`](../enums/GC.Spread.Sheets.Sparklines.DataOrientation.md) | 数据范围的方向。 |
| `type?` | [`SparklineType`](../enums/GC.Spread.Sheets.Sparklines.SparklineType.md) | 迷你图的类型。 |
| `setting?` | [`SparklineSetting`](GC.Spread.Sheets.Sparklines.SparklineSetting.md) | 迷你图的设置。 |

## Properties

### <a id="column" name="column"></a> column

• **column**: `number`

获取列索引。

___

### <a id="row" name="row"></a> row

• **row**: `number`

获取行索引。

## Methods

### <a id="clone" name="clone"></a> clone

▸ **clone**(): [`Sparkline`](GC.Spread.Sheets.Sparklines.Sparkline.md)

克隆迷你图。

**`example`**
```
let sheet = spread.getActiveSheet();
sheet.setArray(0, 0, [-1,2,3,4,3,2,3,5]);
let dataRange = new GC.Spread.Sheets.Range(0, 0, 8, 1);
let sparkline = sheet.setSparkline(11, 0, dataRange, GC.Spread.Sheets.Sparklines.DataOrientation.Vertical, GC.Spread.Sheets.Sparklines.SparklineType.line, new GC.Spread.Sheets.Sparklines.SparklineSetting());                     *
let sparkline2 = sparkline.clone();
```

#### Returns

[`Sparkline`](GC.Spread.Sheets.Sparklines.Sparkline.md)

克隆的迷你图。

___

### <a id="data" name="data"></a> data

▸ **data**(`value?`): `any`

获取或设置数据对象。

**`example`**
```
//此示例使用data方法。
activeSheet.suspendPaint();
activeSheet.setValue(1, 0, 10);
activeSheet.setValue(2, 0, 0);
activeSheet.setValue(3, 0, -3);
activeSheet.setValue(4, 0, -5);
activeSheet.setValue(0, 0, 1);
activeSheet.setValue(0, 1, 2);
activeSheet.setValue(0, 2, 4);
activeSheet.setValue(0, 3, 8);
activeSheet.setValue(0, 4, 6);
activeSheet.setValue(0, 5, new Date(2014, 1, 1));
activeSheet.setValue(1, 5, new Date(2014, 9, 1));
activeSheet.setValue(2, 5, new Date(2014, 7, 1));
activeSheet.setValue(3, 5, new Date(2014, 5, 1));
activeSheet.setValue(4, 5, new Date(2014, 3, 1));
var sparkline = activeSheet.setSparkline(5, 0, new GC.Spread.Sheets.Range(0, 0, 5, 5), GC.Spread.Sheets.Sparklines.DataOrientation.horizontal, GC.Spread.Sheets.Sparklines.SparklineType.line, new GC.Spread.Sheets.Sparklines.SparklineSetting(), new GC.Spread.Sheets.Range(0, 5, 5, 1), GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.data(new GC.Spread.Sheets.Range(0, 0, 5, 5));
sparkline.sparklineType(GC.Spread.Sheets.Sparklines.SparklineType.line);
sparkline.setting(new GC.Spread.Sheets.Sparklines.SparklineSetting());
sparkline.dateAxisData(new GC.Spread.Sheets.Range(0, 5, 5, 1));
sparkline.dataOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.dateAxisOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.row = 5;
sparkline.column = 0;
sparkline.displayDateAxis(true);
activeSheet.resumePaint();
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`Range`](GC.Spread.Sheets.Range.md) | 迷你图数据。 |

#### Returns

`any`

如果未设置值，则返回数据对象；否则返回迷你图。

___

### <a id="dataorientation" name="dataorientation"></a> dataOrientation

▸ **dataOrientation**(`value?`): `any`

获取或设置数据方向。

**`example`**
```
//此示例使用垂直数据和日期范围创建迷你图。
var setting = new GC.Spread.Sheets.Sparklines.SparklineSetting();
setting.options.showMarkers = true;
setting.options.displayXAxis = true;
activeSheet.suspendPaint();
activeSheet.setValue(1, 0, 10);
activeSheet.setValue(2, 0, 0);
activeSheet.setValue(3, 0, -3);
activeSheet.setValue(4, 0, -5);
activeSheet.setValue(0, 0, 1);
activeSheet.setValue(0, 1, 2);
activeSheet.setValue(0, 2, 4);
activeSheet.setValue(0, 3, 8);
activeSheet.setValue(0, 4, 6);
activeSheet.setValue(0, 5, new Date(2014, 1, 1));
activeSheet.setValue(1, 5, new Date(2014, 9, 1));
activeSheet.setValue(2, 5, new Date(2014, 7, 1));
activeSheet.setValue(3, 5, new Date(2014, 5, 1));
activeSheet.setValue(4, 5, new Date(2014, 3, 1));
var sparkline = activeSheet.setSparkline(5, 0, new GC.Spread.Sheets.Range(0, 0, 5, 5), GC.Spread.Sheets.Sparklines.DataOrientation.horizontal, GC.Spread.Sheets.Sparklines.SparklineType.line, setting, new GC.Spread.Sheets.Range(0, 5, 5, 1), GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.dataOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.displayDateAxis(true);
activeSheet.resumePaint();
activeSheet.addSpan(5, 0, 4, 3, null);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`DataOrientation`](../enums/GC.Spread.Sheets.Sparklines.DataOrientation.md) | 迷你图数据方向。 |

#### Returns

`any`

如果未设置值，则返回迷你图数据方向；否则返回迷你图。

___

### <a id="dateaxisdata" name="dateaxisdata"></a> dateAxisData

▸ **dateAxisData**(`value?`): `any`

获取或设置日期轴数据对象。

**`example`**
```
//此示例使用dateAxisData方法。
activeSheet.suspendPaint();
activeSheet.setValue(1, 0, 10);
activeSheet.setValue(2, 0, 0);
activeSheet.setValue(3, 0, -3);
activeSheet.setValue(4, 0, -5);
activeSheet.setValue(0, 0, 1);
activeSheet.setValue(0, 1, 2);
activeSheet.setValue(0, 2, 4);
activeSheet.setValue(0, 3, 8);
activeSheet.setValue(0, 4, 6);
activeSheet.setValue(0, 5, new Date(2014, 1, 1));
activeSheet.setValue(1, 5, new Date(2014, 9, 1));
activeSheet.setValue(2, 5, new Date(2014, 7, 1));
activeSheet.setValue(3, 5, new Date(2014, 5, 1));
activeSheet.setValue(4, 5, new Date(2014, 3, 1));
var sparkline = activeSheet.setSparkline(5, 0, new GC.Spread.Sheets.Range(0, 0, 5, 5), GC.Spread.Sheets.Sparklines.DataOrientation.horizontal, GC.Spread.Sheets.Sparklines.SparklineType.line, new GC.Spread.Sheets.Sparklines.SparklineSetting(), new GC.Spread.Sheets.Range(0, 5, 5, 1), GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.data(new GC.Spread.Sheets.Range(0, 0, 5, 5));
sparkline.sparklineType(GC.Spread.Sheets.Sparklines.SparklineType.line);
sparkline.setting(new GC.Spread.Sheets.Sparklines.SparklineSetting());
sparkline.dateAxisData(new GC.Spread.Sheets.Range(0, 5, 5, 1));
sparkline.dataOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.dateAxisOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.row = 5;
sparkline.column = 0;
sparkline.displayDateAxis(true);
activeSheet.resumePaint();
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`Range`](GC.Spread.Sheets.Range.md) | 迷你图日期轴数据。 |

#### Returns

`any`

如果未设置值，则返回迷你图日期轴数据；否则返回迷你图。

___

### <a id="dateaxisorientation" name="dateaxisorientation"></a> dateAxisOrientation

▸ **dateAxisOrientation**(`value?`): `any`

获取或设置日期轴方向。

**`example`**
```
//此示例使用垂直数据和水平日期创建迷你图。
var setting = new GC.Spread.Sheets.Sparklines.SparklineSetting();
setting.options.showMarkers = true;
setting.options.displayXAxis = true;
activeSheet.suspendPaint();
activeSheet.setValue(1, 0, 10);
activeSheet.setValue(2, 0, 0);
activeSheet.setValue(3, 0, -3);
activeSheet.setValue(4, 0, -5);
activeSheet.setValue(0, 0, 1);
activeSheet.setValue(0, 1, 2);
activeSheet.setValue(0, 2, 4);
activeSheet.setValue(0, 3, 8);
activeSheet.setValue(0, 4, 6);
activeSheet.setValue(0, 5, new Date(2014, 1, 1));
activeSheet.setValue(1, 5, new Date(2014, 9, 1));
activeSheet.setValue(2, 5, new Date(2014, 7, 1));
activeSheet.setValue(3, 5, new Date(2014, 5, 1));
activeSheet.setValue(4, 5, new Date(2014, 3, 1));
activeSheet.setValue(11, 0, new Date(2014, 1, 1));
activeSheet.setValue(11, 1, new Date(2014, 9, 1));
activeSheet.setValue(11, 2, new Date(2014, 7, 1));
activeSheet.setValue(11, 3, new Date(2014, 5, 1));
activeSheet.setValue(11, 4, new Date(2014, 3, 1));
var sparkline = activeSheet.setSparkline(5, 0, new GC.Spread.Sheets.Range(0, 0, 5, 5), GC.Spread.Sheets.Sparklines.DataOrientation.vertical, GC.Spread.Sheets.Sparklines.SparklineType.line, setting, new GC.Spread.Sheets.Range(11, 0, 1, 5), GC.Spread.Sheets.Sparklines.DataOrientation.horizontal);
sparkline.dataOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.dateAxisOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.horizontal);
sparkline.displayDateAxis(true);
activeSheet.resumePaint();
activeSheet.addSpan(5, 0, 4, 3, null);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | [`DataOrientation`](../enums/GC.Spread.Sheets.Sparklines.DataOrientation.md) | 迷你图日期轴方向。 |

#### Returns

`any`

如果未设置值，则返回迷你图日期轴方向；否则返回迷你图。

___

### <a id="displaydateaxis" name="displaydateaxis"></a> displayDateAxis

▸ **displayDateAxis**(`value?`): `any`

获取或设置是否显示日期轴。

**`example`**
```
//此示例使用垂直数据和日期范围创建迷你图。
var setting = new GC.Spread.Sheets.Sparklines.SparklineSetting();
setting.options.showMarkers = true;
setting.options.displayXAxis = true;
activeSheet.suspendPaint();
activeSheet.setValue(1, 0, 10);
activeSheet.setValue(2, 0, 0);
activeSheet.setValue(3, 0, -3);
activeSheet.setValue(4, 0, -5);
activeSheet.setValue(0, 0, 1);
activeSheet.setValue(0, 1, 2);
activeSheet.setValue(0, 2, 4);
activeSheet.setValue(0, 3, 8);
activeSheet.setValue(0, 4, 6);
activeSheet.setValue(0, 5, new Date(2014, 1, 1));
activeSheet.setValue(1, 5, new Date(2014, 9, 1));
activeSheet.setValue(2, 5, new Date(2014, 7, 1));
activeSheet.setValue(3, 5, new Date(2014, 5, 1));
activeSheet.setValue(4, 5, new Date(2014, 3, 1));
var sparkline = activeSheet.setSparkline(5, 0, new GC.Spread.Sheets.Range(0, 0, 5, 5), GC.Spread.Sheets.Sparklines.DataOrientation.horizontal, GC.Spread.Sheets.Sparklines.SparklineType.line, setting, new GC.Spread.Sheets.Range(0, 5, 5, 1), GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.dataOrientation(GC.Spread.Sheets.Sparklines.DataOrientation.vertical);
sparkline.displayDateAxis(true);
activeSheet.resumePaint();
activeSheet.addSpan(5, 0, 4, 3, null);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `value?` | `boolean` | 是否显示日期轴。 |

#### Returns

`any`

如果未设置值，则返回是否显示日期轴；否则返回迷你图。

___

### <a id="group" name="group"></a> group

▸ **group**(`value?`): `any`

获取或设置迷你图组。

**`example`**
```
let sheet = spread.getActiveSheet();
sheet.setArray(0, 0, [1,2,3,4,3,2,3,5]);
let dataRange = new GC.Spread.Sheets.Range(0, 0, 8, 1);
let setting = new GC.Spread.Sheets.Sparklines.SparklineSetting();
let sparkline1 = sheet.setSparkline(11, 0, dataRange, GC.Spread.Sheets.Sparklines.DataOrientation.Vertical, GC.Spread.Sheets.Sparklines.SparklineType.line, setting);
let sparkline2 = sheet.setSparkline(11, 3, dataRange, GC.Spread.Sheets.Sparklines.DataOrientation.Vertical, GC.Spread.Sheets.Sparklines.SparklineType.line, setting);
sheet.groupSparkline([sparkline1,sparkline2]);

let sparklineGroup = sparkline1.group();
console.log(sparklineGroup.count()) // 2
```

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`SparklineGroup`](GC.Spread.Sheets.Sparklines.SparklineGroup.md) |

#### Returns

`any`

如果未设置值，则返回迷你图组；否则返回迷你图。

___

### <a id="paintsparkline" name="paintsparkline"></a> paintSparkline

▸ **paintSparkline**(`ctx`, `x`, `y`, `w`, `h`): `void`

在指定区域绘制迷你图。

**`example`**
```javascript
let sheet = spread.getActiveSheet();
sheet.setArray(0, 0, [-1,2,3,4,3,2,3,5]);
let dataRange = new GC.Spread.Sheets.Range(0, 0, 8, 1);
let sparkline = sheet.setSparkline(11, 0, dataRange, GC.Spread.Sheets.Sparklines.DataOrientation.Vertical, GC.Spread.Sheets.Sparklines.SparklineType.line, new GC.Spread.Sheets.Sparklines.SparklineSetting());
var canvas = document.createElement('canvas');
canvas.width = 200;
canvas.height = 200;
canvas.style.position = 'absolute';
canvas.style.top = '400px';
canvas.style.left = '500px';
canvas.style.zIndex = '99999';
document.body.appendChild(canvas);
var ctx = canvas.getContext('2d');
sparkline.paintSparkline(ctx, 0, 0, 200, 200);
```

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `ctx` | `CanvasRenderingContext2D` | 画布的二维上下文。 |
| `x` | `number` | 相对于画布的<i>x</i>坐标。 |
| `y` | `number` | 相对于画布的<i>y</i>坐标。 |
| `w` | `number` | 包含迷你图的单元格宽度。 |
| `h` | `number` | 包含迷你图的单元格高度。 |

#### Returns

`void`

___

### <a id="setting" name="setting"></a> setting

▸ **setting**(`value?`): `any`

获取或设置单元格的迷你图设置。

**`example`**
```
let sheet = spread.getActiveSheet();
sheet.setArray(0, 0, [-1,2,3,4,3,2,3,5]);
let dataRange = new GC.Spread.Sheets.Range(0, 0, 8, 1);
let sparkline = sheet.setSparkline(11, 0, dataRange, GC.Spread.Sheets.Sparklines.DataOrientation.Vertical, GC.Spread.Sheets.Sparklines.SparklineType.line, new GC.Spread.Sheets.Sparklines.SparklineSetting());

let setting = new GC.Spread.Sheets.Sparklines.SparklineSetting();
setting.options.showMarkers = true;
setting.options.displayXAxis = true;
setting.options.seriesColor = "Text 2 1";
setting.options.firstMarkerColor = "Text 2 3";
setting.options.axisColor ="Text 1 1";

sparkline.setting(setting);
```

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`SparklineSetting`](GC.Spread.Sheets.Sparklines.SparklineSetting.md) |

#### Returns

`any`

如果未设置值，则返回迷你图设置；否则返回迷你图。

___

### <a id="sparklinetype" name="sparklinetype"></a> sparklineType

▸ **sparklineType**(`value?`): `any`

获取或设置迷你图的类型。

**`example`**
```
let sheet = spread.getActiveSheet();
sheet.setArray(0, 0, [-1,2,3,4,3,2,3,5]);
let dataRange = new GC.Spread.Sheets.Range(0, 0, 8, 1);
let sparkline = sheet.setSparkline(11, 0, dataRange, GC.Spread.Sheets.Sparklines.DataOrientation.Vertical, GC.Spread.Sheets.Sparklines.SparklineType.line, new GC.Spread.Sheets.Sparklines.SparklineSetting());

sparkline.sparklineType(GC.Spread.Sheets.Sparklines.SparklineType.column);
```

#### Parameters

| Name | Type |
| :------ | :------ |
| `value?` | [`SparklineType`](../enums/GC.Spread.Sheets.Sparklines.SparklineType.md) |

#### Returns

`any`

如果未设置值，则返回迷你图类型；否则返回迷你图。
